# dotfiles

./: .bash_aliases  .bashrc  .editorconfig  .gitignore  .stow-local-ignore  .tmux.conf  .zshrc  README.md  apps.txt  dev_setup.sh  dotmate.py  installer.sh  pyproject.toml  setup.sh
.claude/plugins/: known_marketplaces.json
.config/ghostty/: config
.config/git/: config  gl_config  r2d2_config
.config/nvim/: lazy-lock.json  lazyvim.json
.config/nvim/lua/config/: options.lua
.config/nvim/lua/plugins/: alpha.lua  clangd.lua  surround.lua
.config/tmux/: tmux.conf
.config/zed/: zed-settings.json
.gemini/: state.json
config/: dotfile_paths.json
config/ghostty/: config
config/git/: config  gh-config  gl-config  ignore
config/nvim/: README.md  init.lua  lazyvim.json
config/ruff/: ruff.toml
config/tmux/: tmux.conf
config/vim/: vimrc
config/vscode/: vscode-settings.json
template/: Dockerfile
unix/linux/: linux-setup.sh
unix/linux/zsh/: zshrc
unix/macos/: apps.txt  mac-setup.sh
unix/macos/zsh/: zshrc
unix/scripts/: install.sh
windows/: windows-config.md
