[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles"
authors = [
    { name = "Neal King" }
]
description = "A personal dotfiles management script"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
dotmate = "dotmate:main"
